# GGE-Utility-Bot

./: .gitignore  Dockerfile  auth.py  bot.py  config.py  data_process.py  main.py  messages.py  pyproject.toml  requirements.txt  server_comm.py  utils.py
.github/workflows/: test.yml
bot_services/: __init__.py  attack_listener.py  battle_report.py  config_manager.py  status_monitor.py
src/gge_utility_bot/: auth.py  bot.py  config.py  data_process.py  db_comm.py  main.py  messages.py  server_comm.py  utils.py
src/gge_utility_bot/bot_manager/: __init__.py  atk_warning.py  bot_commands.py  bot_manager.py  msg_callbacks.py  types.py  utils.py
src/gge_utility_bot/bot_services/: __init__.py  attack_listener.py  battle_report.py  config_manager.py  status_monitor.py
tests/unit/: test_utils.py
tests/unit/bot_services/: test_attack_listener.py  test_config_manager.py  test_status_monitor.py
